[gd_scene load_steps=2 format=3 uid="uid://bhg7jmodo3t5t"]

[ext_resource type="Script" path="res://Entities/Components/EffectComponents/EffectReceiverComponent/EffectHandlers/FrostbiteHandler.gd" id="1_qyabv"]

[node name="FrostbiteHandler" type="Node"]
script = ExtResource("1_qyabv")
